Added options like show and reap

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,7 +10,7 @@
 
 # some basic default values...
 
-hostfile       = /home/junedm/ansible_home/inventory
+hostfile       = inventory
 #hostfile       = /etc/ansible/hosts
 library        = /usr/share/ansible
 remote_tmp     = $HOME/.ansible/tmp
@@ -25,7 +25,7 @@ remote_port    = 22
 
 # additional paths to search for roles in, colon seperated
 #roles_path    = /etc/ansible/roles
-roles_path    = /home/junedm/ansible_home/roles
+roles_path    = roles
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
@@ -89,12 +89,12 @@ ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid}
 #error_on_undefined_vars = False
 
 # set plugin path directories here, seperate with colons
-action_plugins     = /home/junedm/ansible_home/ansible_plugins/action_plugins
-callback_plugins   = /home/junedm/ansible_home/ansible_plugins/callback_plugins
-connection_plugins = /home/junedm/ansible_home/ansible_plugins/connection_plugins
-lookup_plugins     = /home/junedm/ansible_home/ansible_plugins/lookup_plugins
-vars_plugins       = /home/junedm/ansible_home/ansible_plugins/vars_plugins
-filter_plugins     = /home/junedm/ansible_home/ansible_plugins/filter_plugins
+action_plugins     = ansible_plugins/action_plugins
+callback_plugins   = ./ansible_plugins/callback_plugins
+connection_plugins = ansible_home/ansible_plugins/connection_plugins
+lookup_plugins     = ansible_home/ansible_plugins/lookup_plugins
+vars_plugins       = ansible_plugins/vars_plugins
+filter_plugins     = ansible_plugins/filter_plugins
 
 # don't like cows?  that's unfortunate.
 # set to 1 if you don't want cowsay support or export ANSIBLE_NOCOWS=1 
@@ -146,4 +146,4 @@ accelerate_timeout = 30
 accelerate_connect_timeout = 5.0
 
 ######Added By Juned
-fact_path = /home/junedm/ansible_home/facts.d
+fact_path = facts.d/
