Renamed the Play and Role

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,8 +10,7 @@
 
 # some basic default values...
 
-hostfile       = inventory
-#hostfile       = /etc/ansible/hosts
+hostfile       = /home/junedm/Sojourner/inventory
 library        = /usr/share/ansible
 remote_tmp     = $HOME/.ansible/tmp
 pattern        = *
@@ -24,8 +23,7 @@ transport      = smart
 remote_port    = 22
 
 # additional paths to search for roles in, colon seperated
-#roles_path    = /etc/ansible/roles
-roles_path    = roles
+roles_path    = /home/junedm/Sojourner/roles
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
@@ -89,12 +87,12 @@ ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid}
 #error_on_undefined_vars = False
 
 # set plugin path directories here, seperate with colons
-action_plugins     = ansible_plugins/action_plugins
-callback_plugins   = ./ansible_plugins/callback_plugins
-connection_plugins = ansible_home/ansible_plugins/connection_plugins
-lookup_plugins     = ansible_home/ansible_plugins/lookup_plugins
-vars_plugins       = ansible_plugins/vars_plugins
-filter_plugins     = ansible_plugins/filter_plugins
+action_plugins     = /home/junedm/Sojourner/ansible_plugins/action_plugins
+callback_plugins   = /home/junedm/Sojourner/ansible_plugins/callback_plugins
+connection_plugins = /usr/share/ansible_plugins/connection_plugins
+lookup_plugins     = /usr/share/ansible_plugins/lookup_plugins
+vars_plugins       = /usr/share/ansible_plugins/vars_plugins
+filter_plugins     = /usr/share/ansible_plugins/filter_plugins
 
 # don't like cows?  that's unfortunate.
 # set to 1 if you don't want cowsay support or export ANSIBLE_NOCOWS=1 
@@ -144,6 +142,3 @@ etcd_url = 'http://127.0.0.1:4001'
 accelerate_port = 5099
 accelerate_timeout = 30
 accelerate_connect_timeout = 5.0
-
-######Added By Juned
-fact_path = facts.d/
