--- a/roles/inventory/meta/main.yml
+++ b/roles/inventory/meta/main.yml
@@ -1,10 +1,11 @@
 ---
 galaxy_info:
-  author: your name
-  description: 
-  company: your company (optional)
+  author: Juned Memon
+  description: Sample Play for Adding host in Inventory 
+  company: Glam India Pvt Ltd
   license: license (GPLv2, CC-BY, etc)
   min_ansible_version: 1.2
+  version : 1.0
   #
   # Below are all platforms currently available. Just uncomment
   # the ones that apply to your role. If you don't see your 
