--- a/ansible.cfg
+++ b/ansible.cfg
@@ -43,7 +43,7 @@ timeout = 10
 
 # logging is off by default unless this path is defined
 # if so defined, consider logrotate
-#log_path = /var/log/ansible.log
+log_path = /home/junedm/Sojourner/log/ansible.log
 
 # default module name for /usr/bin/ansible
 #module_name = command
@@ -87,7 +87,7 @@ ansible_managed = Ansible managed: {file} modified on %Y-%m-%d %H:%M:%S by {uid}
 #error_on_undefined_vars = False
 
 # set plugin path directories here, seperate with colons
-action_plugins     = /home/junedm/Sojourner/ansible_plugins/action_plugins
+action_plugins     = /usr/share/ansible_plugins/action_plugins
 callback_plugins   = /home/junedm/Sojourner/ansible_plugins/callback_plugins
 connection_plugins = /usr/share/ansible_plugins/connection_plugins
 lookup_plugins     = /usr/share/ansible_plugins/lookup_plugins
