--- a/roles/inventory/tasks/main.yml
+++ b/roles/inventory/tasks/main.yml
@@ -3,3 +3,13 @@
   - name : Just a Test
     debug: msg="My Role is  {{Role}} and Owner is {{Owner}}"
 
+  - name: -> Creating ansible facts dir
+    file: path="/etc/ansible/facts.d" state=directory recurse=yes mode=0755
+    #sudo_user: root
+
+  - name: -> Copy the soujerner.facts template 
+    template: src=sojourner.fact.j2 dest=/etc/ansible/facts.d/sojourner.fact owner=root group=root mode=0644
+
+#  - name: re-read facts after adding custom fact
+#    setup: filter=ansible_local
+
