--- a/roles/inventory/tasks/main.yml
+++ b/roles/inventory/tasks/main.yml
@@ -10,6 +10,6 @@
   - name: -> Copy the soujerner.facts template 
     template: src=sojourner.fact.j2 dest=/etc/ansible/facts.d/sojourner.fact owner=root group=root mode=0644
 
-#  - name: re-read facts after adding custom fact
-#    setup: filter=ansible_local
+  - name: re-read facts after adding custom fact
+    setup: 
 
