renamed role inventory to ansible-sojourner

--- a/plays/Sojourner.yml
+++ b/plays/Sojourner.yml
@@ -6,7 +6,7 @@
   user: root
 
   roles:
-    -  inventory
+    -  ansible-sojourner
 
 #  vars_prompt:
 #    Role: "what is the Role of this server?"
