--- a/Ansible_Roles/ansible-sojourner/tasks/main.yml
+++ b/Ansible_Roles/ansible-sojourner/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-# tasks file for inventory
+# tasks file for ansible-sojourner
   - name : Just a Test
     debug: msg="My Role is  {{Role}} and Owner is {{Product}}"
 
