--- a/Ansible_Roles/ansible-sojourner/vars/main.yml
+++ b/Ansible_Roles/ansible-sojourner/vars/main.yml
@@ -1,5 +1,5 @@
 ---
-# vars file for inventory
+# vars file for ansible-sojourner
 OS_VERSION: '{{ ansible_distribution_version }}'
 
 #Role : "Free"
