Supports both sqlite and mysql now

--- a/conf/sojourner.conf
+++ b/conf/sojourner.conf
@@ -1,6 +1,9 @@
 [sojourner]
 SOUJOURNER_HOME=/home/junedm/Sojourner/
-db_name=sojourner
-db_host=localhost
-db_user=root
-db_password=junedm
+#db_engine=sqlite
+db_engine=mysql
+host=localhost
+port=3306
+user=root
+passwd=junedm
+dbname=sojourner
