Fixed clallback plugin

--- a/conf/sojourner.conf
+++ b/conf/sojourner.conf
@@ -1,9 +1,11 @@
 [sojourner]
 SOUJOURNER_HOME=/home/junedm/Sojourner/
-#db_engine=sqlite
-db_engine=mysql
+db_engine=sqlite
+#db_engine=mysql
 host=localhost
 port=3306
 user=root
 passwd=junedm
 dbname=sojourner
+
+#db_engine allowed are mysql and sqlite. Default is sqlite
