--- a/Ansible_Roles/sojourner/tasks/main.yml
+++ b/Ansible_Roles/sojourner/tasks/main.yml
@@ -1,7 +1,8 @@
 ---
+
 # tasks file for ansible-sojourner
-  - name : Just a Test
-    debug: msg="My Role is  {{Role}} and Owner is {{Product}}"
+#  - name : Just a Test
+#    debug: msg="My Role is  {{Role}} and Owner is {{Product}}"
 
   - name: -> Creating ansible facts dir
     file: path="/etc/ansible/facts.d" state=directory recurse=yes mode=0755
@@ -10,5 +11,5 @@
   - name: -> Copy the soujerner.facts template 
     template: src=sojourner.fact.j2 dest=/etc/ansible/facts.d/sojourner.fact owner=root group=root mode=0644
 
-  - name: re-read facts after adding custom fact
-    setup: 
+#  - name: re-read facts after adding custom fact
+#    setup: 
