Added Chef-Zero support

--- a/conf/sojourner.conf
+++ b/conf/sojourner.conf
@@ -7,5 +7,7 @@ port=3306
 user=root
 passwd=junedm
 dbname=sojourner
-
+#provisioner=chef
+#provisioner=ansible
+#provisioner allowed are ansible|chef
 #db_engine allowed are mysql and sqlite. Default is sqlite
