--- a/ansible.cfg
+++ b/ansible.cfg
@@ -23,7 +23,7 @@ transport      = smart
 remote_port    = 22
 
 # additional paths to search for roles in, colon seperated
-roles_path    = /home/junedm/Ansible_Roles/
+roles_path    = Ansible_Roles/
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
