--- a/conf/sojourner.conf
+++ b/conf/sojourner.conf
@@ -7,8 +7,8 @@ port=3306
 user=root
 passwd=junedm
 dbname=sojourner
-#provisioner=chef
-provisioner=ansible
+provisioner=chef
+#provisioner=ansible
 Chef_Cookbooks=Chef_Cookbooks/
 Ansible_Roles=Ansible_Roles
 ###################################################
