MySql Connection now uses Port as a variable as well

--- a/examples/sojourner.cfg
+++ b/examples/sojourner.cfg
@@ -17,13 +17,13 @@ sojourner_home = /root/Sojourner/
 
 db_engine        = sqlite
 
-db_dbname	= sojourner
 
-# if db_engine is mysql define the port,user,password
+# if db_engine is mysql define the port,user,password,db_dbname
 db_host	= tiber
 db_port	= 3306
 db_user	= root
 db_passwd	= junedm
+db_dbname	= sojourner
 
 [sojourner]
 
