Working on rearranging for distributing on ppip

--- a/examples/sojourner.cfg
+++ b/examples/sojourner.cfg
@@ -11,11 +11,12 @@
 
 # some basic default values...
 
-sojourner_home = /root/Sojourner/
+#sojourner_home defaults to logged in Users home/Sojourner/
+sojourner_home = ${HOME}/Sojourner/
 
 #db_engine, Currently sojourner supports mysql and sqlite as database. Default is sqlite. if mysql define the port,user,password and dbname
 
-db_engine        = sqlite
+db_engine        = mysql
 
 
 # if db_engine is mysql define the port,user,password,db_dbname
@@ -28,15 +29,16 @@ db_dbname	= sojourner
 [sojourner]
 
 # sojourner supports ansible,chef as provisioner. Default is ansible
-provisioner=chef
+provisioner=ansible
 
 [ansible]
 
-#The Path for ansible_roles directory
-ansible_roles=%(sojourner_home)/ansible_roles
+#The Path for ansible_roles directory, if not defined defaults to logged in Users home/Sojourner/ansible_roles
+#ansible_roles=${HOME}/Sojourner/ansible_roles
+# Mark the s in first part
 
 
 [chef]
 
 #The Path for chef cookbook directory
-chef_cookbooks=%(sojourner_home)/chef_cookbooks
+#chef_cookbooks=${HOME}/Sojourner/chef_cookbooks
