Fixed Callback name

--- a/examples/sojourner.cfg
+++ b/examples/sojourner.cfg
@@ -16,7 +16,7 @@ sojourner_home = ${HOME}/Sojourner/
 
 #db_engine, Currently sojourner supports mysql and sqlite as database. Default is sqlite. if mysql define the port,user,password and dbname
 
-db_engine        = mysql
+db_engine        = sqlite
 
 
 # if db_engine is mysql define the port,user,password,db_dbname
