--- a/examples/sojourner.cfg
+++ b/examples/sojourner.cfg
@@ -29,16 +29,17 @@ db_dbname	= sojourner
 [sojourner]
 
 # sojourner supports ansible,chef as provisioner. Default is ansible
-provisioner=ansible
+#provisioner=ansible
+provisioner=chef
 
 [ansible]
 
-#The Path for ansible_roles directory, if not defined defaults to logged in Users home/Sojourner/ansible_roles
-#ansible_roles=${HOME}/Sojourner/ansible_roles
+#The Path for ansible_roles directory, if not defined defaults to logged in Users home/Sojourner/Ansible_Roles
+#ansible_roles=${HOME}/Sojourner/Ansible_Roles
 # Mark the s in first part
 
 
 [chef]
 
-#The Path for chef cookbook directory
-#chef_cookbooks=${HOME}/Sojourner/chef_cookbooks
+#The Path for chef cookbook directory, if not defined defaults to logged in Users home/Sojourner/Chef_Cookbooks
+#chef_cookbooks=${HOME}/Sojourner/Chef_Cookbooks
