--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,5 @@
 *.pyc
 *.db
-data_base/sojourner.db
-Chef_Cookbooks/*.*
-Ansible_Roles/*.*
-Chef_Cookbooks/dummy/templates/*
 Ansible_Roles/*
 Chef_Cookbooks/*
+sojourner.egg-info/*
