--- a/examples/sojourner.cfg
+++ b/examples/sojourner.cfg
@@ -34,12 +34,12 @@ provisioner=chef
 
 [ansible]
 
-#The Path for ansible_roles directory, if not defined defaults to logged in Users home/Sojourner/Ansible_Roles
+#The Path for ansible_roles directory, if not defined defaults to sojourner_home/Ansible_Roles
 #ansible_roles=${HOME}/Sojourner/Ansible_Roles
 # Mark the s in first part
 
 
 [chef]
 
-#The Path for chef cookbook directory, if not defined defaults to logged in Users home/Sojourner/Chef_Cookbooks
+#The Path for chef cookbook directory, if not defined defaults to sojourner_home/Chef_Cookbooks
 #chef_cookbooks=${HOME}/Sojourner/Chef_Cookbooks
