Added the callback plugin in setup to install at /usr/share/ansible_plugins/callback_plugins/

--- a/examples/sojourner.cfg
+++ b/examples/sojourner.cfg
@@ -29,8 +29,7 @@ db_dbname	= sojourner
 [sojourner]
 
 # sojourner supports ansible,chef as provisioner. Default is ansible
-#provisioner=ansible
-provisioner=chef
+provisioner=ansible
 
 [ansible]
 
